pages/dkp/konvoy/1.4/reference/command-line-interface/konvoy-up/index.md
---
layout: layout.pug
navigationTitle: konvoy up
title: konvoy up
menuWeight: 10
notes: Automatically generated, DO NOT EDIT
excerpt: Run provision, and deploy (kubernetes, container-networking, and addons) to create or update a Kubernetes cluster reflecting the provided configuration and inventory files
---

## konvoy up

Run provision, and deploy (kubernetes, container-networking, and addons) to create or update a Kubernetes cluster reflecting the provided configuration and inventory files

### Synopsis

Run provision, and deploy (kubernetes, container-networking, and addons) to create or update a Kubernetes cluster reflecting the provided configuration and inventory files

```
konvoy up [flags]
```

### Options

```
      --addons-repositories strings   A comma separated list of addons repositories with uri@version (default [https://github.com/mesosphere/kubeaddons-kommander@stable-1.16-1.0.1,https://github.com/mesosphere/kubeaddons-dispatch@stable-1.16-1.0.0,https://github.com/mesosphere/kubernetes-base-addons@stable-1.16-1.9.0])
      --cluster-name string           Name used to prefix the cluster and all the created resources (default "konvoy")
      --force-upgrade                 run an upgrade on all nodes that require it, ignoring upgrade safety checks
  -h, --help                          help for up
      --provisioner string            select a provisoner [aws|azure|docker|none] (default "aws")
      --upgrade                       run an upgrade on all nodes that require it
      --verbose                       enable to debug level logging
      --without-draining              run an upgrade on all nodes that require it, without draining the nodes first (requires --upgrade or --force-upgrade flag) (WARNING! usage can result in undefined behavior and service downtime)
  -y, --yes                           run command without prompting
```

### SEE ALSO

* [konvoy](../)	 - deploy and manage Kubernetes clusters

###### Auto generated by spf13/cobra on 31-Mar-2020
